Iniciando proyecto y creando el html general

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="seccionMain">
-        <div class="seccionEstatus">
+        <div class="seccionEstatus" id="seccionEstatus">
           <p class="total">Total: 0</p>
           <p class="realizadas">Realizadas: 0</p>
         </div>
